--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.12'
-
 services:
   task-db:
     image: postgres:13
@@ -9,7 +7,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data_dev:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     env_file: .env
@@ -20,12 +18,12 @@ services:
     environment:
       REDIS_PASSWORD: ${REDIS_PASSWORD}
     volumes:
-      - redis_data:/var/lib/redis/data
+      - redis_data_dev:/var/lib/redis/data
     ports:
       - "6379:6379"
       - "8001:8001"
     env_file: .env
-  
+
   api:
     build: .
     depends_on:
@@ -35,9 +33,9 @@ services:
       DATABASE_URL: ${DATABASE_URL}
     ports:
       - "8000:8000"
-    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
     env_file: .env
 
 volumes:
-  postgres_data:
-  redis_data:
+  postgres_data_dev:
+  redis_data_dev:
