--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,4 +29,4 @@ jobs:
         run: flake8 ./src --count --exit-zero --max-line-length=127 --statistics
 
       - name: Run tests with test.sh
-        run: bash ./src/test.sh
+        run: bash ./src/ci-test.sh
