--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,12 +10,39 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    services:
+      # Configuración para PostgreSQL
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: amaterasu
+          POSTGRES_DB: database
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+      # Configuración para Redis Stack
+      redis:
+        image: redis/redis-stack:latest
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
       - name: Set up Python 3.12
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
@@ -28,5 +55,12 @@ jobs:
       - name: Lint code
         run: flake8 ./src --count --exit-zero --max-line-length=127 --statistics
 
+      - name: Wait for services to be ready
+        # Aunque los health checks de 'services' ayudan, esta espera adicional
+        # puede ser útil para asegurar que las bases de datos estén completamente inicializadas.
+        run: sleep 10
+
       - name: Run tests with test.sh
+        # Asegúrate de que tu script ci-test.sh y tu código Python
+        # usen 'postgres' como host para PostgreSQL y 'redis' para Redis.
         run: bash ./src/ci-test.sh
