--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,14 +12,14 @@ jobs:
     env:
       ALGORITHM: HS256
       SECRET_KEY: MW6mdMOU8Ga58KSty8BYakM185zW857fZlTBqdmp1JkVih3qqr
-      # Asegúrate de que estas variables estén presentes:
-      REDIS_HOST: redis
+      REDIS_HOST: redis  # Esto es correcto para el entorno de CI
       REDIS_PORT: 6379
       REDIS_DB: 0
-      DATABASE_URL: postgresql+psycopg2://postgres:amaterasu@postgres:5432/database # <-- Esto es importante para database.py
+      DATABASE_URL: postgresql+psycopg2://postgres:amaterasu@postgres:5432/database
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: amaterasu
       POSTGRES_DB: database
+      CI: "true"  # Añade esta variable para que tu código detecte que está en CI
 
     services:
       # Configuración para PostgreSQL
