--- a/alembic.ini
+++ b/alembic.ini
@@ -63,8 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+psycopg2://postgres:amaterasu@localhost:5432/database
-
+sqlalchemy.url = postgresql+psycopg2://postgres:amaterasu@task-db:5432/database
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
