--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
       - "8000:8000"
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
     env_file: .env
+    volumes:
+      - .:/backend
 
 volumes:
   postgres_data_dev:
