--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -74,3 +74,16 @@ uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
 wrapt==1.17.2
+
+amqp==5.3.1
+billiard==4.2.1
+celery==5.5.3
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+kombu==5.5.4
+prompt-toolkit==3.0.51
+python-dateutil==2.9.0.post0
+tzdata==2025.2
+vine==5.1.0
+wcwidth==0.2.13
